# konsfekt

./: .env  .gitignore  0001-start-to-transactions-table.patch  Caddyfile  Cargo.toml  Dockerfile  README.md  access_levels.json  docker-compose.yml  new_errors.md  openapi.yaml  package-lock.json  permission_table.json  role_table.json  template.env  test_page.html  userflow.md
backend/: .gitignore
backend/migrations/: 0001_user.sql
backend/src/: auth.rs  main.rs
backend/src/database/: crud.rs
db/: db.sqlite
docs/: dev-vs-prod.md
frontend/: components.json  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/: app.css
frontend/src/lib/: storage.svelte.ts  utils.ts
frontend/src/lib/components/: BalanceChart.svelte  DarkModeToggle.svelte  LogoButton.svelte  ProductScroller.svelte  SafetyButton.svelte  TransactionTable.svelte  UserDialog.svelte  app-sidebar.svelte  nav-main.svelte  nav-user.svelte  schemas.ts  section-cards.svelte  site-header.svelte
frontend/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  +page.ts
frontend/src/routes/(admin)/: +layout.svelte  +layout.ts
frontend/src/routes/(site)/: +layout.svelte  +layout.ts  +page.svelte  +page.ts  ProductDisplay.svelte
frontend/src/routes/admin/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
frontend/src/routes/login/: +page.svelte
migrations/: 0001_user.sql  0002_store.sql  0003_payment.sql  0003_search.sql  0004_search.sql
scripts/: dogs_metadata.json  mockdata.py  user_metadata.json
src/: args.rs  auth.rs  auth_redirect.rs  error.rs  lib.rs  main.rs  model.rs  routes.rs  types.rs  utils.rs
src-tauri/: tauri.conf.json
src/database/: crud.rs  mod.rs  model.rs
src/routes/: debug.rs  mod.rs  oauth.rs  payment.rs  products.rs  routes.rs  stats.rs  transactions.rs  user.rs
src/types/: bankid.rs  mod.rs
(+30 files in other folders)
