[package]
name = "konsfekt"
version = "0.1.0"
edition = "2024"

[dependencies]
time = { version = "0.3.41", features = ["serde"]}
rand = "0.9.1"
sha2 = "0.10.9"
argon2 = "0.5.3"
hex = "0.4.3"
serde_json = "1.0.139"
serde = "1.0.218"
actix-web = "4"
clap = { version = "4.5.47", features = ["derive"] }
dotenv = "0.15.0"
tokio = { version = "1.45.1", features = ["full"]}
uuid = { version = "1.17.0", features = ["serde", "v4"]}
reqwest = { version = "0.12.23", features = ["json"]}
hmac = "0.12.1"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["macros", "migrate", "runtime-tokio", "tls-native-tls", "sqlite", "time", "uuid"]
