[package]
name = "konsfekt"
version = "0.1.0"
edition = "2024"

[dependencies]
time = { version = "0.3.41", features = ["serde"]}
rand = "0.9.1"
sha2 = "0.10.9"
hex = "0.4.3"
serde_json = "1.0.139"
serde = "1.0.218"
actix-web = "4"
actix-cors = "0.7.1"
dotenv = "0.15.0"
tokio = { version = "1.45.1", features = ["full"]}
reqwest = { version = "0.12.23", features = ["json"]}
actix-files = "0.6.8"
local-ip-address = "0.6.5"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["macros", "migrate", "runtime-tokio", "tls-native-tls", "sqlite", "time", "uuid"]
